test/fail/issue-5336.mo
//MOC-FLAG --require-persistent-actors
//MOC-FLAG -A=M0194

import Actor "issue-5336/actor";

persistent actor class Main() {};
